# cartorio-system

./: .env.example  .gitattributes  .gitignore  CARTORIO_SYSTEM_PROJECT_CONFIGURATION.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: README  env.py
app/: main.py
docs/: AUDIT_DEPLOYMENT_AND_OPERATION.md  AUDIT_MODULE_ROADMAP.md  AUDIT_OPERATIONAL_PROCEDURE.md  AUDIT_READ_ONLY_POLICY.md  CNJ_213_ALIGNMENT.md  CNJ_213_REGULATORY_INTEGRATION_BLUEPRINT.md  README.md  RISK_REGISTER_MODEL.md  ROADMAP_CNJ213.md  VISITATION_READINESS_PLAN.md  architecture.md  decisions.md  finance.md  how_to_run.md  roadmap.md  testing.md
scripts/: gerar_relatorio_pdf.py
tests/: conftest.py  test_audit_findings.py  test_compliance_evidence_models.py  test_compliance_evidence_routes.py  test_compliance_evidence_service.py  test_compliance_finding_link_models.py  test_compliance_finding_link_routes.py  test_compliance_finding_link_service.py  test_compliance_isolation.py  test_compliance_models.py  test_compliance_requirement_status_history.py  test_compliance_requirement_status_models.py  test_compliance_requirement_status_routes.py  test_compliance_requirement_status_service.py  test_compliance_routes.py  test_compliance_seed.py  test_diagnosis_retention_integration.py  test_document_diagnosis.py  test_file_scanner.py  test_finance_entries.py  test_health.py  test_isolation.py  test_lgpd_actions.py  test_notas_inventarios_calculator.py  test_notas_inventarios_golden.py  test_notas_inventarios_odt_exporter.py  test_notas_inventarios_output_dir.py  test_retention_rules.py  (+11 more)
(+157 files in other folders)
